# stereofixer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
stereofixer/: AtomMapper.py  PandasStereoChecker.py  PandasStereoEnumerator.py  StereoChecker.py  StereoEnumerator.py  __init__.py  utils.py
tests/: test_checker.py  test_enumerate.py  test_pandas_enumerate.py
