[project]
name = "stereofixer"
version = "0.0.1"
authors = [
    { name="Anastasia Sveshnikova", email="anastasia.sveshnikova@sib.swiss" },
]
description = "Package to analyse given reaction in terms of stereochemistry tags, identify non-matching tags, identify missing tags and enumerate stereo options for them."
readme = "README.md"
requires-python = ">=3.9, <3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Linux",
    # "Operating System :: OS Independent",
]
dependencies = [
    "pandas",
    "rdkit",
    "networkx",
    "tqdm",
    "matplotlib",
    "pathlib",
    "rxnmapper",
]

[dependency-groups]
dev = [
    "setuptools",
    "pytest >=7.1.3",
    "pytest-cov >=3.0.0",
    "mypy >=1.4.1",
    "pandas-stubs",
]

# [project.urls]
# Homepage = "https://github.com/sib-swiss/stereofixer"
# Issues = "https://github.com/sib-swiss/stereofixer/issues"


[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["stereofixer"]
include-package-data = true


[tool.pytest.ini_options]
addopts = [
    "--cov=stereofixer",
    "--color=yes",
    "--cov-report=term-missing",
]
